<resources>
    <string name="app_name">Bttendance</string>
    <string name="app_name_capital">BTTENDANCE</string>
    <string name="drawer_open">Menu Open</string>
    <string name="drawer_close">Menu Close</string>
    <string name="turn_on_bt_title">"Turn on Bluetooth"</string>
    <string name="turn_on_bt_message">"Turn on Bluetooth to use \"Bttendance\" properly."</string>
    <string name="oopps">Ooooppss!</string>
    <string name="too_many_users_are_connecting">Too many users are connecting at the same time, please try again later.</string>
    <string name="recovering_password">Recovering Password&#8230;</string>
    <string name="loging_in_bttendance">Loging In Bttendance&#8230;</string>
    <string name="signing_up_bttendance">Signing Up Bttendance&#8230;</string>
    <string name="updating_profile">Updating Profile&#8230;</string>
    <string name="cancel">Cancel</string>
    <string name="confrim">"Confirm"</string>
    <string name="ok">"OK"</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">"Password"</string>
    <string name="professor">Instructor</string>
    <string name="professor_capital">INSTRUCTOR</string>
    <string name="student">Student</string>
    <string name="student_capital">STUDENT</string>
    <string name="enter">Enter</string>
    <string name="profile">Profile</string>
    <string name="school">School</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="see_more">See More</string>
    <string name="introduction_first_welcome">Welcome!</string>
    <string name="introduction_first_message">Let me introduce\nhow to use\nBTTENDANCE.</string>
    <string name="introduction_clicker_message">Check the response of your students\nduring the class by using BTTENDANCE</string>
    <string name="introduction_attendance_message">Check your students\' attendance\naccurately and effortlessly\nby using elaborate algorithm.</string>
    <string name="introduction_curious_message">학생들과 자유롭게 묻고 답해보세요!</string>
    <string name="introduction_notice_message">Notify important information\nto your students as easy as\nsending a text message.</string>
    <string name="introduction_last_start">Let\'s start\nBTTENDANCE</string>
    <string name="start_with_facebook">"Start with Facebook"</string>
    <string name="start_with_google">"Start with Google+"</string>
    <string name="sign_up_with_email">"Sign Up"</string>
    <string name="log_in_with_email">"Log In"</string>
    <string name="sign_up">Sign Up</string>
    <string name="by_tapping_i_agree_to_the_start">"By tapping \"Sign up\" above, you are agreeing to the "</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="_and_">" and "</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="by_tapping_i_agree_to_the_end">.</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password_underline"><u>Forgot password?</u></string>
    <string name="forgot_password">"Forgot Password"</string>
    <string name="create_course">"Create Course"</string>
    <string name="attend_course">"Attend Course"</string>
    <string name="create_course_instructor">"Create Course (Instructor)"</string>
    <string name="attend_course_student">"Attend Course (Student)"</string>
    <string name="attendance_check_has_been_canceled">"Attendance check has been canceled"</string>
    <string name="attendance_check">"Attendance check"</string>
    <string name="turn_on_your_bluetooth_settings">"Attendance Checking is ongoing. Turn on your bluetooth to enhance your accuracy in attendance checking."</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="notice">Notice</string>
    <string name="create_notice">Create Notice</string>
    <string name="post">Post</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_manager">Add Manager</string>
    <string name="would_you_like_to_add">Would you like to add \"%1$s\" as a manager of course %2$s?</string>
    <string name="is_now_manager_of_course">\"%1$s\" is now a manager of course %2$s.</string>
    <string name="plus">Plus</string>
    <string name="password_recovery_success">Password Recovery Success</string>
    <string name="password_recovery_has_been_succeeded">Password recovery has been succeeded.\nPlease check your email.\n%s</string>
    <string name="unjoin_course">Leave Course</string>
    <string name="export_grades">Export Results (send as email)</string>
    <string name="start">Start</string>
    <string name="setting">Setting</string>
    <string name="write_an_announcement">Write an announcement.</string>
    <string name="start_clicker">Start Clicker</string>
    <string name="exporting_grades">Exporting Results</string>
    <string name="exporting_grade_has_been_finished">Exporting Results has been finished.\nPlease check your email.\n%s</string>
    <string name="unjoining_course">Leaving Course</string>
    <string name="no_course">No Course Yet :(</string>
    <string name="press_plus_button">Press \'+\' button\nto create or attend a course.</string>
    <string name="do_you_really_wish_to_unjoin">Do you really wish to leave course %s?</string>
    <string name="do_you_really_wish_to_open">Do you really wish to open course %s?</string>
    <string name="attending_course">Attending Course</string>
    <string name="would_you_like_to" formatted="false">Would you like to attend %s by %s?</string>
    <string name="creating_course">Creating Course</string>
    <string name="no_identity">No Identity</string>
    <string name="lectures">LECTURES</string>
    <string name="add_course">Add Course</string>
    <string name="guide">Guide</string>
    <string name="feedback">Feedback</string>
    <string name="clicker_rate_attendance_rate"><![CDATA[Clicker rate <b>%1$d%%</b>  Attendance <b>%2$d%%</b>]]></string>
    <string name="students_read_recent_notice"><![CDATA[<b>%1$d/%2$d</b> students have read recent notice]]></string>
    <string name="unread_notices"><![CDATA[<b>%d</b> unread notices]]></string>
    <string name="clicker_rate_attendance_rate_none">Clicker rate %  Attendance %</string>
    <string name="students_read_recent_notice_none">/ students have read recent notice</string>
    <string name="unread_notices_none"> unread notices</string>
    <string name="menu">Menu</string>
    <string name="clicker_capital">CLICKER</string>
    <string name="institution_capital">INSTITUTION</string>
    <string name="saved_clicker_questions">%d Saved Clicker Questions</string>
    <string name="update_password">Update Password</string>
    <string name="student__">Student - %s</string>
    <string name="closed_lectures">CLOSED LECTURES</string>
    <string name="edit_">Edit %s</string>
    <string name="if_you_turn_off_the_notification">If you turn off the notification, you won\'t be able to receive instructor\'s action.</string>
    <string name="attendance">Attendance</string>
    <string name="clicker">Clicker</string>
    <string name="curious">Curious</string>
    <string name="attendance_notification">Attendance Notification</string>
    <string name="clicker_notification">Clicker Notification</string>
    <string name="notice_notification">Notice Notification</string>
    <string name="blog">Blog</string>
    <string name="facebook">Facebook Page</string>
    <string name="identity">Identity</string>
    <string name="updating_password">Updating Password</string>
    <string name="current_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="more_than_six_letters_">more than 6 letters..</string>
    <string name="make_your_lecture_interactive">Make Your Lecture Interactive!</string>
    <string name="john_smith">John Smith</string>
    <string name="john_at_bttendance_dot_com">john@bttendance.com</string>
    <string name="institution">Institution</string>
    <string name="please_choose_a_institution">Choose an institution.</string>
    <string name="code">Code</string>
    <string name="enter_your_class_code">Enter your class code.</string>
    <string name="other_institutions">Other Institutions</string>
    <string name="my_institutions">My Institutions</string>
    <string name="_courses">%d Courses</string>
    <string name="create_an_institution">Create an Institution</string>
    <string name="search">Search</string>
    <string name="choose_institution">Choose Institution</string>
    <string name="create_institution">Create Institution</string>
    <string name="choose_the_type_of_institution">Choose the type of institution.</string>
    <string name="etc">Etc.</string>
    <string name="institute">Institute</string>
    <string name="university">University</string>
    <string name="creating_school">Creating Institution</string>
    <string name="student_number_univ">Student Number</string>
    <string name="student_number_school">Student Number</string>
    <string name="before_you_join_univ">Before you join course %s, you need to enter your student number</string>
    <string name="before_you_join_school">Before you join course %s, you need to enter your student number</string>
    <string name="before_you_join_institute">Before you join course %s, you need to enter your phone number</string>
    <string name="before_you_join_etc">Before you join course %s, you need to enter your identity number</string>
    <string name="continue_">Continue</string>
    <string name="your_course_has_been_created">Your course has been created!</string>
    <string name="tips_for_bttendance">Tips for BTTENDANCE</string>
    <string name="guide_create_course_class_code_info">Please tell the students about the class code on the left. Students may register your course easily by entering the class code.</string>
    <string name="class_code">CLASS CODE</string>
    <string name="guide_create_course_first_info">Please inform the students in detail why you are using BTTENDANCE.</string>
    <string name="guide_create_course_second_info">It is important to tell the students that during class, smartphones may not be used for anything other than BTTENDANCE.</string>
    <string name="guide_create_course_third_info">Please check the guide and the tutorial anytime when you have difficulty using the features of BTTENDANCE!</string>
    <string name="you_are_successfully_registered">You are successfully\nRegistered!</string>
    <string name="guide_attend_course_first_info">When the instructor is using the features of BTTENDANCE, check the feed under the course info to participate.</string>
    <string name="guide_attend_course_second_info">Click each post to view its information in detail.</string>
    <string name="guide_attend_course_third_info">Attendance on BTTENDANCE will be checked via Bluetooth, so please keep the Bluetooth on while calling attendance.</string>
    <string name="guide_attend_course_forth_info">Please refrain from using the smartphone for functions other than BTTENDANCE during class!</string>
    <string name="open_course">Open Course</string>
    <string name="opening_course">Opening Course</string>
    <string name="s_students">%s Students Enrolled</string>
    <string name="course_setting">Course Setting</string>
    <string name="records_capital">RECORDS</string>
    <string name="students_capital">STUDENTS</string>
    <string name="managers_capital">MANAGERS</string>
    <string name="close_course">Close Course</string>
    <string name="attendance_records">Attendance Records</string>
    <string name="clicker_records">Clicker Records</string>
    <string name="export_records">Export Records</string>
    <string name="show_the_student_list">Show the Student List</string>
    <string name="would_you_like_to_close_course">Would you like to close %s?</string>
</resources>