<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="110dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/curious"
            android:textColor="@color/bttendance_white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:layout_width="34dp"
            android:layout_height="4dp"
            android:layout_marginTop="13dp"
            android:background="@color/bttendance_white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:gravity="center"
            android:lineSpacingExtra="5dp"
            android:text="@string/introduction_curious_message"
            android:textColor="@color/bttendance_white"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/curiousicon" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

    </LinearLayout>

    <Button
        android:id="@+id/see_more"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp"
        android:background="@drawable/see_more_btn_bg"
        android:text="@string/see_more"
        android:textColor="@color/bttendance_white"
        android:textSize="12sp"
        android:textStyle="bold" />

</RelativeLayout>